@@ -101,7 +101,7 @@ w32_reset_context (LPVOID v)
   if (! SetThreadContext (w32_main_thread, context)) 
     {
       fprintf (stderr, "%lx: context failed: ctrl-c won't work\n",
-	       GetCurrentThreadId ()); 
+               GetCurrentThreadId ()); 
       fflush (stderr);
     }
   DEBUGs ("context captured (or not)");
@@ -120,13 +120,13 @@ w32_raise_in_main (void)
   DEBUGd ("w32_raise_in_main with signal %d", w32_signal_to_raise);
   raise (w32_signal_to_raise);
   DEBUGd ("w32_raise_in_main signal %d returned a value",
-	  w32_signal_to_raise);
+          w32_signal_to_raise);
 
   DEBUGs ("attempting to restore main to pre-signal configuration");
   if (w32_restore_thread != NULL) /* Catch leaky threads */
     CloseHandle (w32_restore_thread);
   w32_restore_thread = CreateThread (NULL, 10000, w32_reset_context,
-				     &w32_signal_context, 0, &threadid);
+                                     &w32_signal_context, 0, &threadid);
   if (w32_restore_thread == NULL) 
     {
       fprintf (stderr, "w32_raise_in_main couldn't create thread\n"); 
@@ -175,17 +175,17 @@ w32_raise (int sig)
       SuspendThread (w32_main_thread);
       /* X86 code */
       w32_signal_context.ContextFlags 
-	= CONTEXT_FULL|CONTEXT_FLOATING_POINT|CONTEXT_DEBUG_REGISTERS;
+        = CONTEXT_FULL|CONTEXT_FLOATING_POINT|CONTEXT_DEBUG_REGISTERS;
       GetThreadContext (w32_main_thread, &w32_signal_context);
 
       /* Change the context to w32_raise_in_main.  The
-	 context.Eip=&fn trick for setting the program counter is
-	 courtesy of
+         context.Eip=&fn trick for setting the program counter is
+         courtesy of
 
-	   http://fit.c2.com/files/LispPlatform/lisp/clisp-2.28/src/win32aux.d
+           http://fit.c2.com/files/LispPlatform/lisp/clisp-2.28/src/win32aux.d
 
          Auxiliary functions for CLISP on Win32, Bruno Haible
-	 1997-1999.  */
+         1997-1999.  */
 
       memcpy (&raise_context, &w32_signal_context, sizeof (CONTEXT));
       raise_context.Eip = (DWORD)&w32_raise_in_main; /* X86 code */
@@ -195,7 +195,7 @@ w32_raise (int sig)
       /* Resume main at w32_raise_in_main */
       ret = ResumeThread (w32_main_thread);
       DEBUGd ("main resumed at w32_raise_in_main with suspend count %d",
-	      ret);
+              ret);
     }
 }
 
@@ -205,8 +205,8 @@ w32_sigint_init (void)
   /* Capture main context */
   w32_main_thread_id = GetCurrentThreadId ();
   DuplicateHandle (GetCurrentProcess (), GetCurrentThread (),
-		   GetCurrentProcess (), &w32_main_thread,
-		   0, FALSE, DUPLICATE_SAME_ACCESS);
+                   GetCurrentProcess (), &w32_main_thread,
+                   0, FALSE, DUPLICATE_SAME_ACCESS);
 
   InitializeCriticalSectionAndSpinCount (&w32_thread_setjmp_mutex, 0);
 }
