@@ -154,17 +154,17 @@ CRUFT_API extern void octave_rethrow_exception (void);
       octave_save_current_context (saved_context); \
  \
       if (octave_set_current_context) \
-	{ \
-	  octave_restore_current_context (saved_context)
+        { \
+          octave_restore_current_context (saved_context)
 
 #define BEGIN_INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE_2 \
-	} \
+        } \
       else \
-	{ \
-	  octave_interrupt_immediately++
+        { \
+          octave_interrupt_immediately++
 
 #define END_INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE \
-	  octave_interrupt_immediately--; \
+          octave_interrupt_immediately--; \
           octave_restore_current_context (saved_context); \
         } \
     } \
